--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "opentype.js": "^1.3.4",
     "vue": "^3.5.25"
   },
   "devDependencies": {
